# xwn-gnosis

./: .codecov.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PLAN-faction-tracker.md  Procfile  README.md  WWN.md  compose.yml  docker-compose-dev.yml  docker-compose.yml  faction-game-issues-log.md  mkdocs-en.yml  mkdocs-uk.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
app/: admin.py  config.py  db.py  i18n.py  logging_config.py  main.py  models.py  schemas.py  search_service.py  utils.py
app/dependencies/: auth.py  i18n.py
app/routers/: misc.py  rules.py  rulesets.py  search.py
app/templates/: base.html  compendium.html  compendium_content.html  compendiums_home.html  index.html  rule_card.html  rule_detail_page.html  rulesets_home.html  search_results.html
archive_fastapi_app/: alembic.ini  coverage.json  docker-compose-dev.yml  mkdocs-en.yml  mkdocs-uk.yml  step-6-magic-en.md.backup  step-6-magic-uk.md.backup
archive_fastapi_app/app/: db.py  i18n.py  models.py  schemas.py  utils.py
archive_fastapi_app/scripts/: add_h4_headers.py  add_h4_headers_targeted.py  convert_headers_titlecase.py  elementalism_spells.py  fix_markdown_lists.py  fix_uk_bullets.py  format_spells.py  format_spells_en.py  generate_weapons.py  high_magic_spells.py  monsters.py  necromancy_spells.py  post_weapons_to_api.py  revert_h4_to_bold.py  split_compendium.py  split_markdown_hierarchical.py  split_markdown_simple.py
archive_fastapi_app/tests/: __init__.py  conftest.py  test_api_health.py  test_api_rules.py  test_api_rulesets.py  test_api_search.py  test_health_check.py  test_utils.py
config/: settings.py  urls.py
data/: wwn_weapons.json
data/data_sources/: wwn-lite-en.md  wwn-lite-uk.md
data/source_md/: wwn-lite-uk.md
docs/: index.md
docs/stylesheets/: extra.css
migrations/: env.py
migrations/versions/: 01886ad3430e_initial_migration_create_rules_table.py  409125800384_add_unique_constraints_on_slugs.py  5449d2b942f6_initial_migration_with_final_schema.py  5d72b936e475_add_pg_trgm_extension_for_fuzzy_search.py  d9dd3901dddc_rulesets_table_relationships_rules_.py
scripts/: split_markdown_hierarchical.py
static/css/: combat-tracker.css  faction-tracker.css
staticfiles/: staticfiles.json
tests/: README.md  conftest.py  test_api.py  test_api_health.py  test_api_rulesets.py  test_auth.py  test_health_check.py  test_models.py  test_schemas.py  test_search_service.py  test_utils.py  test_web_search.py
tools/: admin.py  urls.py  views.py
xwn_gnosis_django/: .env.example  Dockerfile  pyproject.toml
(+348 files in other folders)
