[project]
name = "xwn-gnosis-django"
version = "0.1.0"
description = "XWN TRPG tools and rules reference - Django version"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "django>=6.0.1",
    "django-htmx>=1.27.0",
    "granian>=2.5.4",
    "gunicorn>=24.1.1",
    "markdown>=3.9",
    "python-dotenv>=1.1.0",
    "servestatic[brotli]>=3.1.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0",
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "pytest-django>=4.9.0",
    "ruff>=0.11",
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["archive_fastapi_app/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "C",
  "DTZ",
  "E",
  "F",
  "FLY",
  "G002",
  "G003",
  "G010",
  "G101",
  "I",
  "N",
  "PL",
  "Q",
  "RET",
  "RUF",
  "S",
  "T10",
  "T20",
  "UP",
  "W",
]
ignore = [
  "N805",
  "PLR0912",
  "PLR0913",
  "RUF100",
  "S101",
  "S104",
  "PLR2004",
]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["PLC0415"]  # Standard Django pattern: import in try/except for helpful error
"tools/views.py" = ["RUF001"]  # Allow Cyrillic characters in i18n verdicts
"**/migrations/*.py" = ["RUF012"]  # Django migrations use mutable class attributes by design
"**/admin.py" = ["RUF012"]  # Django ModelAdmin uses mutable class attributes by design
"**/models.py" = ["RUF012"]  # Django Model Meta classes use mutable class attributes
"tests/**/*.py" = [
    "S106",    # Allow hardcoded passwords in tests
    "PLR2004", # Allow magic values in tests
    "PLC0415", # Allow imports inside functions in tests
    "DTZ005",  # Allow datetime without timezone in tests
]

